# cloud-distributed-trace

./: .gitignore  CMakeLists.txt  Dockerfile  LamportClock.c  README.txt  SocketLibrary.c  compile_flags.txt  compose.yml  libcompile.sh  srccompile.sh  testcompile.sh
debugger/: CMakeLists.txt  debugger.cpp  debugger.py
debugger/testprog/: main.cpp
function_trace_example/: file1.cpp  file2.cpp  file3.cpp  functions.h  main.cpp  program
include/: distributed_trace.h  filelogger.hpp  logger.hpp  socket.h  ts-aggregate.h
lib/: socket.cpp  test.cpp  ts-aggregate.cpp
src/: CMakeLists.txt  compose.yml  testprog.cpp
src/client/: CMakeLists.txt  client.cpp
src/server/: CMakeLists.txt  server.cpp
tests/: test_test.cpp
